- Fix: remove 'Hey, <user name>' on mobile - Fix: border on first options of a select input - Fix: added margin top in form inputs on mobile

--- a/frontend/src/styles/components/_inputs.scss
+++ b/frontend/src/styles/components/_inputs.scss
@@ -120,6 +120,11 @@
     @apply rounded-b-xl #{!important};
   }
 
+  .ss-option:first-child,
+  .ss-option:nth-child(2) {
+    @apply rounded-t-xl #{!important};
+  }
+
   .ss-option:hover {
     @apply bg-base-300 text-base-content #{!important};
   }
